<?xml version="1.0" encoding="utf-8"?>
	 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	     android:id="@+id/outerLayout"
	     android:layout_width="match_parent"
	     android:layout_height="match_parent"
	     android:layout_alignParentLeft="true"
	     android:layout_alignParentTop="true"
	     android:orientation="vertical" >

	    <LinearLayout
	        android:id="@+id/barraTopo" 
	        android:orientation="horizontal" 
		    android:layout_width="fill_parent"
		    android:layout_height="54dp"
		    android:background="@drawable/barra">

            <RelativeLayout 
                android:layout_height="fill_parent"
                android:layout_width="fill_parent" 
                android:layout_weight="1"
                android:gravity="center" 
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icontop"
                    android:layout_width="54dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/logonew" />

                <TextView android:layout_height="0dip" 
		          android:layout_width="fill_parent"
		          android:layout_weight="1" />

                <TextView
                    android:id="@+id/msgtop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>
		</LinearLayout>
		
	    <LinearLayout
	        android:id="@+id/fundo"
	        android:layout_width="320dp"
	        android:layout_height="fill_parent"
	        android:background="@drawable/background"
	        android:orientation="horizontal" >
            
	        <LinearLayout 
                android:layout_height="fill_parent"
                android:layout_width="fill_parent" 
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center" 
                android:orientation="vertical">

	            <TextView 
                    android:id="@+id/msgutilizador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" 
                    android:layout_marginLeft="4dp"
                    android:textColor="@color/white"
                    android:textSize="14sp" 
                    android:textStyle="bold"
                    android:singleLine="true" 
                    android:gravity="left"
                    android:text="@string/loginformutilizador"/>
	            
	            <EditText
	                android:id="@+id/utilizadorform"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >

	                <requestFocus />
	            </EditText>

	            <TextView 
                    android:id="@+id/msgpalavrachave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="4dp"  
                    android:textColor="@color/white"
                    android:textSize="14sp" 
                    android:textStyle="bold"
                    android:singleLine="true" 
                    android:gravity="left"
                    android:text="@string/loginformpalavrachave"/>
	            
	            <EditText
	                android:id="@+id/palavrachaveform"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:inputType="textPassword" />

	            <RelativeLayout
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:layout_marginTop="15dp"
	                android:orientation="horizontal" >
	            
		            <Button
		                android:id="@+id/loginbtn"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_alignParentLeft="true"
		                android:layout_marginLeft="10dp"
		                android:text="Entrar" />
		            
		            <Button
		                android:id="@+id/registerbtn"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_alignParentRight="true"
		                android:layout_marginRight="10dp"
		                android:text="Registar" />
		            
		        </RelativeLayout>

	            <TextView
	                android:id="@+id/warningMsg"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_marginLeft="10dp"
	                android:text="" />

	            <TextView android:layout_height="0dip" 
		          android:layout_width="fill_parent"
		          android:layout_weight="1" />
	            
	            
	            <LinearLayout
	                android:id="@+id/socialbtns"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="10dp"
	                android:gravity="center"
	                android:orientation="vertical">

		            <LinearLayout
		                android:id="@+id/ouhorizontal"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:gravity="center"
		                android:orientation="horizontal">
		                	                
		                <ImageView
		                    android:id="@+id/barraouesq"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_gravity="left"
		                    android:src="@drawable/barraou" />
		                
			            <TextView 
		                    android:id="@+id/outxt"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content" 
		                    android:layout_marginBottom="10dp"
		                    android:layout_marginLeft="5dp"
		                    android:layout_marginRight="5dp"
		                    android:textColor="@color/gray"
		                    android:textSize="12sp" 
		                    android:textStyle="bold"
		                    android:singleLine="true" 
		                    android:gravity="center"
		                    android:text="@string/oumsg"/>

		                <ImageView
		                    android:id="@+id/barraoudir"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_gravity="right"
		                    android:src="@drawable/barraou" />
		            
		            </LinearLayout>
	                
	                <ImageButton
	                  android:id="@+id/fbbtn"
	                  android:layout_width="180dp"
	                  android:layout_height="wrap_content"
	                  android:background="@drawable/signinfacebook"
	                  android:layout_marginBottom="5dp" />
	                
	                <ImageButton
	                  android:id="@+id/twitterbtn"
	                  android:layout_width="180dp"
	                  android:layout_height="wrap_content"
	                  android:background="@drawable/signintwitter"
	                  android:layout_marginBottom="5dp" />
	                
	            </LinearLayout>
	                
	        </LinearLayout>
	    </LinearLayout>

	 </LinearLayout>